@@ -1,0 +1,28 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/T
+R/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <title>nested table for mech</title>
+</head>
+<body>
+  <table>
+    <tr>
+      <td class="form_cell">
+        <h3>Show all users and groups</h3>
+        <table id="admin_form">
+          <tr>
+            <th>User</th><th>Groups</th>
+          </tr>
+          <tr>
+            <td class="even">company</td>
+            <td class="even"> company,email,employee,website </td>
+          </tr>
+        </table>
+      </td>
+      <td>Foobar</td>
+    </tr>
+  </table>
+  <p>Its been said: <cite>so it was</cite></p>
+  <p>Hi <cite>bye</cite> Hi</p>
+</body>
+</html>
